--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,12 @@
-.App {
-  text-align: center;
+.covid-timeline-contianer {
+  height: 500px;
+  width: 800px;
+  margin-left: 200px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.filter-container {
+  margin-top: 40px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.title-container {
+  font-size: 20px;
 }
